--- a/index.html
+++ b/index.html
@@ -7,40 +7,18 @@
     <meta name="description" content="Pracitca 1 de M8 by David Martinez">
     <meta name="author" content="David Martinez">
     <title>David Martinez - M8 Practica 1</title>
+
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <header>
-        <h1 align="center">
-            <a href="#"> Los Sistemas Operativos más conocidos </a>
-        </h1>
-        <nav>
-            <h2 align="center">
-                <a style="margin-right: 250px;"> Windows </a>
-                 | 
-                <a style="margin-left: 250px;">GNU/Linux</a>
-            </h2>
-        </nav>
-    </header>
-    <section>
-        <article>
-            <table style="margin-left: auto; margin-right: auto;">
-                <tr>
-                    <td>
-                        <a href="./page/windows.html">
-                            <img src="./img/windows.jpg" alt=""  width="600" height="350"/>
-                        </a>
-                    </td>
-                    <td>
-                        <a href="./page/linux.html">
-                            <img src="./img/tux.jpg" alt=""/>
-                        </a>
-                    </td>
-                </tr>
-            </table>
-        </article>
-    </section>
-    <footer align="center" style="margin-top: 250px;">
-        2022 - David Martinez
-    </footer>
+    <div id="container">
+        <header class="head">
+            <h1>titulo</h1>
+        </header>
+
+        <footer class="footer">
+            2022 - David Martinez
+        </footer>
+    </div>
 </body>
 </html>
