Pagina principal done!

--- a/index.html
+++ b/index.html
@@ -13,11 +13,38 @@
 <body>
     <div id="container">
         <header class="head">
-            <h1>titulo</h1>
+            <h1>Los Sistemas Operativos más conocidos</h1>
         </header>
 
+        <!-- Titulo Windows -->
+        <div class="twin">
+            <h2>Windows</h2>
+        </div>
+        
+        <!-- Titulo Linux -->
+        <div class="tlin">
+            <h2>Linux</h2>
+        </div>
+
+        <!-- Link Windows -->
+        <div class="imgwin">
+            <a href="./page/windows.html">
+                <img src="./img/windows.jpg" alt=""/>
+            </a>
+        </div>
+        
+        <!-- Link Linux -->
+        <div class="imglin">
+            <a href="./page/linux.html">
+                <img src="./img/tux.jpg" alt=""/>
+            </a>
+        </div>
+
+        <!-- Pie de pagina -->
         <footer class="footer">
-            2022 - David Martinez
+            <h3>
+                2022 - David Martinez
+            </h3>
         </footer>
     </div>
 </body>
