--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div id="container">
+    <div id="container-main">
         <header class="head">
             <h1>Los Sistemas Operativos más conocidos</h1>
         </header>
